re PR debug/14718 (ICE in force_decl_die (dwarf2out.c))

PR 14718
	* dwarf2out.c (dwarf2out_imported_module_or_decl): Use
	force_type_die for CONST_DECL.

From-SVN: r81431